@@ -10,7 +10,9 @@ branches:
 env:
   global:
     - AUTHOR_TESTING=0
+    - COVERAGE_URI="https://roxsoft.co.uk/coverage/report/%s"
+    - secure: lcvzSuXVwpWIUA65Ukw57G2Unm7CbsQIOJDI9jbMflFQB5JJ8hjCbGwldyMZgcoNiJyRHbEYK27/H3eQ+TxyG8D9Mw7yptsQUA9247RmvBhQbEMyX+a86oFuADAt5Zh/0Czfei8EGKobzYBZrX+5lmsbixXfxYcooPm1EXLrVyM=
 before_install:
   - cpanm -n Devel::Cover
-script:
-  perl Build.PL && ./Build && ./Build testcover
+  - cpanm -n Devel::Cover::Report::OwnServer
+script: perl Build.PL && ./Build && cover -test -report ownServer
