@@ -1,5 +1,6 @@
 Revision history for File::Gettext
 
+          - Added Travis coverage summary and badge
           - Refactored smoker exceptions to dump file
           - Better attribute and method naming
           - Schema attribute values collected from configuration
